installments/home-assistant/ha-namespace.yaml
{
  apiVersion: v1,
  kind: Namespace,
  metadata: {
    name: home-assistant,
    labels: {
      name: home-assistant
    }
  }
}
