installments/home-assistant/ha-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  replicas: 1
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: homeassistant/raspberrypi3-homeassistant
          ports:
            - containerPort: 80
#          volumeMounts:
#            - name: vmfs-vmdk-storage
#              mountPath: /data/
---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant-service
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: xxx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home-assistant-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: home-assistant.pi-worker-1
      http:
        paths:
          - path: /
            backend:
              serviceName: home-assistant-service
              servicePort: 80
